chore: Minor rewrite

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "TestContainers": {
-    "Enabled": false
+    "Enabled": false,
+    "RunMigrations": false
   },
   "Database": {
     "ConnectionString": "<replace me>"
