chore: Add a test

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -8,5 +8,8 @@
   "TestContainers": {
     "Enabled": true,
     "RunMigrations": true
+  },
+  "Database": {
+    "EnableSensitiveDataLogging": true
   }
 }
